[package]
name = "iseven_api"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust wrapper for isEven API"
homepage = "https://github.com/megascrapper/iseven-api-rust"
repository = "https://github.com/megascrapper/iseven-api-rust"
categories = ["api-bindings", "mathematics"]
keywords = ["iseven", "is-even", "api", "silly-things"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.30"
ansi_term = "0.12.1"