[package]
name = "iseven_api"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust wrapper for isEven API"
homepage = "https://github.com/megascrapper/iseven-api-rust"
repository = "https://github.com/megascrapper/iseven-api-rust"
categories = ["api-bindings", "mathematics"]
keywords = ["iseven", "is-even", "api", "silly-things"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.56"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"

[features]
blocking = ["reqwest/blocking"]

[[bin]]
name = "iseven_api"
required-features = ["blocking"]


[package.metadata.docs.rs]
all-features = true
