[package]
name = "iseven_api"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust wrapper for isEven API"
homepage = "https://github.com/megascrapper/iseven-api-rust"
repository = "https://github.com/megascrapper/iseven-api-rust"
categories = ["api-bindings", "mathematics"]
keywords = ["iseven", "is-even", "api", "silly-things"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["json", "blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.56"
log = "0.4.20"

# CLI dependencies
clap = { version = "4.4.18", features = ["derive"], optional = true }
env_logger = { version = "0.11.1", optional = true }
human-panic = { version = "2.0.0", optional = true }

[features]
blocking = ["reqwest/blocking"]
cli = ["clap", "env_logger", "human-panic", "blocking"]

[[bin]]
name = "iseven_api"
required-features = ["cli"]


[package.metadata.docs.rs]
all-features = true
